# JuTrack.jl

./: .gitignore  ESR_main.json  LICENSE  Manifest.toml  Project.toml  README.md  conv_metrix.txt  esr_main.jls  esr_main_mutable.jls  esr_main_mutable_vector.jls  esr_main_vector.jls  final.txt  index.html  objects.inv  search_index.js  test1.jl  twiss_matrix.txt
.github/workflows/: CI.yml  Docs.yml  deploy_docs.yml
api/: index.html
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
dev/api/: index.html
docs/: Manifest.toml  Project.toml  make.jl
docs/src/: api.md  index.md
ext/: JuTrackPyCallExt.jl
precompile/: _agg_warmup.jl  build_sysimage.jl  generate_statements.jl  run_warmup.jl  trace_base.jl
python_integration/: MANIFEST.in  README.md  __init__.py  demo_RDTs_optimization.py  demo_fma.py  demo_plot_lattice.py  demo_strongbb.py  demo_wakefield.py  phase_advance_tuning_demo.py  pyJuTrack.py  pyproject.toml  requirements.txt  setup.py  test_installation.py
src/: JuTPSA.jl  JuTrack.jl
src/MLmodel/: GAN_model.py  ML_SC.jl  emit_growth_withSC_ML.jl
src/TPSA/: TPSA.jl  fast_HOTPSA_module.jl  fast_HOTPSA_tracking.jl  fast_TPSA_module.jl  fast_TPSA_tracking.jl  mathfunc.jl  polymap.jl
src/TPSA_Enzyme/: TPSA.jl  TPSA_fixedmap.jl  arrayTPSA_fixedmap.jl  mathfunc.jl  (+1 more)
test/: .documenter-siteinfo.json  DA_demo.jl  DA_test.jl  ESR.jl  ESR_seq_elements.jl  Jacobian_benchmark.jl  Jacobian_demo.jl  RDT_demo copy.jl  RDT_demo.jl  TEST_FODOcell.jl  TPSA_demo.jl  Test_EIC.jl  TwissTuning_ESR.jl  TwissTuning_SSRF.jl  TwissTuning_test.jl  TwissTuning_test_ESR.jl  TwissTuning_test_SSRF.jl  alsu1.jl  cal_eigen.jl  conv_map_test2.jl  convergence_map_test.jl  esr-main.jl  esr-main_LinearQuads.jl  esr-main_rad.jl  esr_main.jl  esr_main.jls  esr_main_fromseq.jl  esr_main_fromseq.jls  esr_main_rad.jls  esr_main_rad_craboff.jls  esr_main_vector.jls  fma_demo.jl  fodo_sc2p5d_demo.jl  fodocell_parameter.txt  hsr_YROT_TRANSLATION.jl  index.html  jsonstyle.jl  latt_test.jl  phase_advance_tuning_demo.jl  plot_lattice_example.jl  (+37 more)
(+130 files in other folders)
