[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyJuTrack"
version = "1.0.0"
description = "Python wrapper for JuTrack.jl - A particle accelerator simulation and optimization library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "JuTrack.jl Contributors"},
]
maintainers = [
    {name = "MSU Beam Dynamics Group"},
]
keywords = [
    "particle accelerator",
    "simulation",
    "optimization",
    "julia",
    "TPSA",
    "automatic-differentiation",
    "beam dynamics",
    "optics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Julia",
    "Operating System :: OS Independent",
]
dependencies = [
    "juliacall>=0.9.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
plotting = [
    "matplotlib>=3.3.0",
]
dev = [
    "pytest>=6.0",
    "matplotlib>=3.3.0",
    "ipython>=7.0",
]
all = [
    "matplotlib>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/MSU-Beam-Dynamics/JuTrack.jl"
Documentation = "https://msu-beam-dynamics.github.io/JuTrack.jl/"
Repository = "https://github.com/MSU-Beam-Dynamics/JuTrack.jl"
Issues = "https://github.com/MSU-Beam-Dynamics/JuTrack.jl/issues"

[tool.setuptools]
py-modules = ["pyJuTrack"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyJuTrack*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
